Fix CI failings